layouts on various devices + template container widths + some header behavior on mobiles improvements + global search form issue for mobiles fixed
the layout on various devices should be match that on mockups,
including proper container widths. Header now doesn’t break horizontal
layout of the page.
Global improvement: there was issue with search form for mobile view
(320px width) which messed with horizontal website layout by adding
some horizontal scrolling - fixed!

--- a/assets/styles/layouts/_pages.scss
+++ b/assets/styles/layouts/_pages.scss
@@ -9,8 +9,8 @@ margin-bottom: 30px;
 	margin:0;
 }
 
-.container {}
-
+.container {
+}
 .content.row {
 	margin-left: 0;
 	margin-right: 0;
